2013-05-05 Max Baak <mbaak@cern.ch>
	M       configManager.py
	M       channel.py
	* Fix: remapping of overall systematics was broken in the trunk
        * Tagged HistFitter-00-00-28

2013-04-24 Max Baak <mbaak@cern.ch>
	M       Utils.cxx
	M       src/HypoTestTool.cxx
	* Added GlobalObservables() and Offset() to createNll() calls.
        * Tagged HistFitter-00-00-27

2013-04-24 Max Baak <mbaak@cern.ch>
        * Tagged HistFitter-00-00-26

2013-04-24 Max Baak <mbaak@cern.ch>
	M	setup.sh
	* Point to root v5.34.06, with several important bug roofit and roostats bug fixes
	* http://root.cern.ch/drupal/content/root-version-v5-34-00-patch-release-notes
	M       scripts/YieldsTable.py
	M       scripts/SysTable.py
	* Use minos error by default if available
	M       src/Utils.cxx
	* Fix small compiler warning.
	* Plot PLL curve for minos parameters

2013-04-12 Max Baak <mbaak@cern.ch>
	M       src/Utils.cxx
	M       setup.sh
	* point setup file to root trunk
	* Fit uses Minuit2

2013-04-08 Max Baak <mbaak@cern.ch>
        M       Utils.cxx
        M       Utils.h
        * Always force evaluation of Hesse
        * Update of plotNLL function.
        * Added function to change interpolation code
        M       src/ConfigMgr.cxx
        * overwrite default fit - change from piece-wise linear to 6th order poly interp + linear extrapolation (also used in Higgs group)

2013-04-03 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* check for proper null-ptr in python/prepareHistos.py

2013-04-02 Jeanette Loranz <jeanette.miriam.lorenz@cern.ch>
        M python/configManager.py
        M python/histogramsManager.py
        * bug fixes in userNormHistosys and userHistoSys

2013-04-02 David Cote <david.cote@cern.ch>
	* Updated to more robust pattern for region and component names matching in ChannelStyle.cxx and Utils.cxx

2013-03-28 Max Baak <mbaak@cern.ch>
	M       scripts/YieldsTable.py
	M       scripts/SysTable.py
	M       src/Utils.cxx
	M       src/Utils.h